# kazeterm

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.MD  _build.sh  build-linux-docker.sh  kazeterm.toml
.cargo/: config.toml
.github/: copilot-instructions.md  lsp.json
.github/docs/: event-system.md
.github/skills/wiki/: SKILL.md
.github/skills/wiki/examples/: configuration.md
.github/workflows/: ci.yaml  pr.yaml
assets/linux/: kazeterm.desktop
assets/screenshots/: screenshot1.avif
assets/themes/: dracula.toml  github.toml  kanagawa.toml  monokai.toml  one.toml  one_dark.toml  solarized.toml  tokyo.toml
crates/config/: Cargo.toml
crates/config/src/: alacritty_import.rs  keybinding.rs  lib.rs  migration.rs  palette.rs  profiles.rs  session.rs  shell.rs  ssh.rs  theme.rs
crates/config/src/migration/: mod.rs  tests.rs
crates/config/src/migration/steps/: migrate_v0_to_20260208_1.rs  migrate_v20260208_1_to_20260220_1.rs  migrate_v20260220_1_to_20260303_1.rs  migrate_v20260303_1_to_20260306_1.rs  migrate_v20260306_1_to_20260322_1.rs  migrate_v20260322_1_to_20260323_1.rs  migrate_v20260323_1_to_20260323_2.rs  migrate_v20260323_2_to_20260327_1.rs  migrate_v20260327_1_to_20260407_1.rs  migrate_v20260407_1_to_20260411_1.rs  migrate_v20260411_1_to_20260411_2.rs  migrate_v20260411_2_to_20260411_3.rs  migrate_v20260411_3_to_20260412_1.rs  migrate_v20260412_1_to_20260412_2.rs  migrate_v20260412_2_to_20260412_3.rs  migrate_v20260412_3_to_20260414_1.rs  migrate_v20260414_1_to_20260414_2.rs  migrate_v20260414_2_to_20260415_1.rs  migrate_v20260415_1_to_20260415_2.rs  migrate_v20260415_2_to_20260415_3.rs  migrate_v20260415_3_to_20260416_1.rs  migrate_v20260416_1_to_20260416_2.rs  migrate_v20260416_2_to_20260416_3.rs  migrate_v20260416_3_to_20260417_1.rs  migrate_v20260417_1_to_20260417_2.rs  migrate_v20260417_2_to_20260417_3.rs  migrate_v20260417_3_to_20260419_1.rs  migrate_v20260419_1_to_20260421_1.rs  migrate_v20260421_1_to_20260422_1.rs  migrate_v20260422_1_to_20260512_1.rs  mod.rs
crates/config/src/theme/: colors.rs  mod.rs
crates/config/tests/: default_keybindings.rs
crates/kazeterm/: Cargo.toml  build.rs
crates/kazeterm-event-system/: Cargo.toml
crates/kazeterm-event-system/src/: app_event.rs  event_bus.rs  event_sources.rs  json_event.rs  lib.rs
crates/kazeterm-event-system/tests/: json_event_protocol.rs
crates/kazeterm-ui-tree/: Cargo.toml
crates/kazeterm-ui-tree/src/: action.rs  diff.rs  lib.rs  node.rs  reducer.rs
crates/kazeterm-ui-tree/tests/: integration.rs  replay.rs
crates/kazeterm/src/: app_icon.rs  assets.rs  auto_update.rs  build_info.rs  config.rs  config_watcher.rs  event_system.rs  main.rs  reconciler.rs  session_state.rs  test_support.rs
crates/kazeterm/src/components/: about_dialog.rs  close_confirm_dialog.rs  dragged_tab.rs  import_alacritty_dialog.rs  main_window.rs  main_window_dialog_handlers.rs  main_window_e2e_tests.rs  main_window_render.rs  main_window_search.rs  main_window_split_pane_actions.rs  main_window_tab_item.rs  main_window_tab_management.rs  main_window_tab_switcher_logic.rs  menu_builder.rs  mod.rs  notifications.rs  search_bar.rs  session_restore_error_dialog.rs  shell_error_dialog.rs  shell_icon.rs  split_pane.rs  split_pane_context_menu.rs  tab_button.rs  tab_rename_dialog.rs  tab_switcher.rs  terminal_tab_bar.rs  terminal_window.rs  update_confirm_dialog.rs  workspace_state.rs
crates/kazeterm/src/event_system/: app_event.rs  event_sources.rs  json_event.rs  mod.rs
crates/mcpserver/: Cargo.toml
crates/mcpserver/src/: main.rs
crates/terminal/: Cargo.toml
crates/terminal-kernel/: Cargo.toml
crates/terminal-kernel-alacritty/: Cargo.toml
crates/terminal-kernel-alacritty/src/: lib.rs
crates/terminal-kernel-ghostty/: Cargo.toml
crates/terminal-kernel-ghostty/src/: ghostty_event_loop.rs  ghostty_term.rs  lib.rs
crates/terminal-kernel-unix-bundle/: Cargo.toml
crates/terminal-kernel-unix-bundle/src/: lib.rs
crates/terminal-kernel-vte/: Cargo.toml
crates/terminal-kernel-vte/src/: lib.rs  vte_event_loop.rs  vte_term.rs
crates/terminal-kernel-xterm/: Cargo.toml
crates/terminal-kernel-xterm/src/: lib.rs
crates/terminal-kernel/src/: backend.rs  lib.rs
crates/terminal/src/: apca_contrast.rs  background_region.rs  batched_text_run.rs  cursor_layout.rs  highlighted_range_line.rs  hover_target.rs  ime_state.rs  indexed_cell.rs  layout_rect.rs  lib.rs  minimap.rs  mouse.rs  osc7.rs  pty_info.rs  scrollbar.rs  terminal.rs  terminal_bounds.rs  terminal_content.rs  terminal_element.rs  terminal_hyperlinks.rs  terminal_input_handler.rs  terminal_view.rs  test_support.rs
crates/terminal/src/kitty_graphics/: command.rs  graphics_pipe.rs  mod.rs  parser.rs  placement.rs  pty_filter.rs  storage.rs
crates/terminal/src/mappings/: colors.rs  keys.rs  mod.rs  mouse.rs
crates/terminal/src/terminal/: events.rs  input.rs  mod.rs  mouse_scroll.rs  search.rs  touch.rs
crates/terminal/src/terminal_element/: element_impl.rs  grid_layout.rs  helpers.rs  mod.rs  mouse_handlers.rs
crates/terminal/tests/: fake_session.rs  headless_terminal.rs  snapshot_grid.rs
crates/terminal/tests/snapshots/: snapshot_grid__snapshot_clear_screen.snap  snapshot_grid__snapshot_cursor_movement_overwrites.snap  snapshot_grid__snapshot_ls_output.snap  snapshot_grid__snapshot_shell_like_prompt.snap
crates/themeing/: Cargo.toml
crates/themeing/src/: defaults.rs  lib.rs
docs/: event-system.md
