[workspace]
resolver = "2"
members = [
  "crates/config",
  "crates/kazeterm",
  "crates/themeing",
  "crates/terminal"
]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
gpui = { version = "0.2.2", default-features = false }
gpui-macros = "0.2.2"
gpui-component = "0.5.1"
alacritty_terminal = "0.25.1"
anyhow = "1.0.100"
smol = "2.0.2"
tokio = { version = "1" }
tokio-tungstenite = { version = "0.26", features = ["__rustls-tls"] }
windows-core = "0.61"
image = "0.25"
itertools = "0.14.0"
futures = "0.3"
futures-batch = "0.6.1"
futures-lite = "1.13"
rust-embed = "8.9.0"
smallvec = { version = "1.6", features = ["union"] }
sysinfo = "0.31.0"
libc = "0.2"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
regex = "1.10"
url = "2.5.8"
urlencoding = "2.1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "7.0"
notify-debouncer-mini = "0.5"

[workspace.dependencies.windows]
version = "0.61"
features = [
  "Foundation_Numerics",
  "Storage_Search",
  "Storage_Streams",
  "System_Threading",
  "UI_ViewManagement",
  "Wdk_System_SystemServices",
  "Win32_Globalization",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Direct3D_Fxc",
  "Win32_Graphics_DirectComposition",
  "Win32_Graphics_DirectWrite",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Imaging",
  "Win32_Graphics_Hlsl",
  "Win32_Networking_WinSock",
  "Win32_Security",
  "Win32_Security_Credentials",
  "Win32_Security_Cryptography",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Console",
  "Win32_System_DataExchange",
  "Win32_System_Environment",
  "Win32_System_IO",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_System_Performance",
  "Win32_System_Pipes",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_System_Variant",
  "Win32_System_WinRT",
  "Win32_UI_Controls",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_Ime",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Media_Audio",
  "Win32_System_Registry",
]

[profile.release]
debug = "limited"
lto = "thin"
codegen-units = 1

[profile.release-fast]
inherits = "release"
debug = "full"
lto = false
codegen-units = 16
strip = true

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
declare_interior_mutable_const = "deny"
redundant_clone = "deny"
style = { level = "allow", priority = -1 }
type_complexity = "allow"
let_underscore_future = "allow"
single_range_in_vec_init = "allow"
too_many_arguments = "allow"
large_enum_variant = "allow"
nonminimal_bool = "allow"

[workspace.metadata.cargo-machete]
ignored = [
  "bindgen",
  "cbindgen",
  "prost_build",
  "serde",
  "component",
  "documented",
  "workspace-hack",
]
