[workspace]
resolver = "2"
members = [
  "crates/config",
  "crates/kazeterm",
  "crates/themeing",
  "crates/terminal"
]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
gpui = { version = "0.2.2", default-features = false }
gpui-macros = "0.2.2"
gpui-component = "0.5.1"
alacritty_terminal = "0.25.1"
anyhow = "1.0.100"
smol = "2.0.2"
  windows-core = "0.61"
  image = "0.25"
  itertools = "0.14.0"
  futures = "0.3"
  rust-embed = "8.9.0"
  sysinfo = "0.31.0"
libc = "0.2"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
regex = "1.10"
url = "2.5.8"
urlencoding = "2.1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "7.0"
notify-debouncer-mini = "0.5"
notify-rust = "4"

[workspace.dependencies.windows]
version = "0.61"
features = [
  "Data_Xml_Dom",
  "UI_Notifications",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Media_Audio",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
]

[profile.dev.package."*"]
opt-level = 2

[profile.release]
debug = false
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.release-fast]
inherits = "release"
debug = false
lto = false
codegen-units = 16

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
declare_interior_mutable_const = "deny"
redundant_clone = "deny"
style = { level = "allow", priority = -1 }
type_complexity = "allow"
let_underscore_future = "allow"
single_range_in_vec_init = "allow"
too_many_arguments = "allow"
large_enum_variant = "allow"
nonminimal_bool = "allow"

[workspace.metadata.cargo-machete]
ignored = [
  "bindgen",
  "cbindgen",
  "prost_build",
  "serde",
  "component",
  "documented",
  "workspace-hack",
]
