[package]
name = "kazeterm"
version = "0.1.0"
edition = "2024"
description = "A modern GPU-accelerated terminal emulator"
authors = ["fallenwood"]
license = "GPL-3.0"
repository = "https://github.com/fallenwood/kazeterm"

[dependencies]
anyhow.workspace = true
gpui = { workspace = true, features = [
    "wayland",
    # "x11",
    "font-kit",
    "windows-manifest",
] }
gpui-macros.workspace = true
gpui-component.workspace = true
alacritty_terminal.workspace = true
itertools.workspace = true
futures.workspace = true
sysinfo.workspace = true
smol.workspace = true
smallvec.workspace = true
libc.workspace = true
rust-embed.workspace=true
clap = { version = "4", features = ["derive"] }
serde_json = "1"

config = { path = "../config" }
terminal = { path = "../terminal" }
themeing = { path = "../themeing" }
toml.workspace = true
serde.workspace = true
dirs.workspace = true
regex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true
image.workspace = true
uds_windows = "1"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[package.metadata.bundle]
icon = ["../../assets/icons/kazeterm.png"]
identifier = "net.fallenwood.kazeterm"
name = "Kazeterm"
