[package]
name = "kazeterm"
version = "0.1.0"
edition = "2024"
description = "A modern GPU-accelerated terminal emulator"
authors = ["fallenwood"]
license = "GPL-3.0"
repository = "https://github.com/fallenwood/kazeterm"

[dependencies]
anyhow.workspace = true
gpui = { workspace = true, features = ["font-kit"] }
gpui-macros.workspace = true
gpui-component.workspace = true
futures.workspace = true
smol.workspace = true
rust-embed.workspace=true
clap = { version = "4", features = ["derive"] }
serde_json = "1"

config = { path = "../config" }
kazeterm-event-system = { path = "../kazeterm-event-system" }
terminal = { path = "../terminal" }
terminal-kernel = { path = "../terminal-kernel" }
terminal-kernel-alacritty = { path = "../terminal-kernel-alacritty" }
themeing = { path = "../themeing" }
toml.workspace = true
serde.workspace = true
dirs.workspace = true
regex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
terminal-kernel-ghostty = { path = "../terminal-kernel-ghostty" }

[dev-dependencies]
gpui = { workspace = true, features = ["font-kit", "test-support"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
mimalloc = { version = "0.1.50", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
raw-window-handle = "0.6"

# Use native notification APIs on macOS and Windows.
# notify-rust is only needed on Linux.
[target.'cfg(target_os = "linux")'.dependencies]
terminal-kernel-vte = { path = "../terminal-kernel-vte" }
notify-rust = { workspace = true }
which.workspace = true
raw-window-handle = "0.6"
x11rb = "0.13"
image = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
gpui = { workspace = true, features = ["windows-manifest"] }
windows.workspace = true
image.workspace = true

[target.'cfg(not(target_os = "linux"))'.dependencies]
gpui = { workspace = true, features = ["wayland"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[package.metadata.bundle]
icon = ["../../assets/icons/kazeterm.png"]
identifier = "net.fallenwood.kazeterm"
name = "Kazeterm"
category = "public.app-category.developer-tools"
short_description = "A terminal emulator"
copyright = "Copyright (c) fallenwood"
osx_minimum_system_version = "10.15"
