[package]
name = "terminal-kernel-alacritty"
version = "0.1.0"
publish.workspace = true
edition.workspace = true

[dependencies]
alacritty_terminal.workspace = true
config = { path = "../config" }
futures.workspace = true
terminal = { path = "../terminal" }
terminal-kernel = { path = "../terminal-kernel" }

[lints]
workspace = true
