[package]
name = "terminal-kernel-ghostty"
version = "0.1.0"
publish.workspace = true
edition.workspace = true

[dependencies]
config = { path = "../config" }
futures.workspace = true
libc.workspace = true
parking_lot = "0.12"
terminal = { path = "../terminal" }
terminal-kernel = { path = "../terminal-kernel" }
libghostty-vt = { git = "https://github.com/Uzaaft/libghostty-rs.git", default-features = false }

[lints]
workspace = true
