[package]
name = "terminal-kernel-vte"
version = "0.1.0"
publish.workspace = true
edition.workspace = true

[dependencies]
config = { path = "../config" }
futures.workspace = true
libc.workspace = true
parking_lot = "0.12"
terminal = { path = "../terminal" }
terminal-kernel = { path = "../terminal-kernel" }
vte = "0.15"

[lints]
workspace = true
