[package]
name = "terminal-kernel-xterm"
version = "0.1.0"
publish.workspace = true
edition.workspace = true

[dependencies]
config = { path = "../config" }
futures.workspace = true
libc = "0.2"
parking_lot = "0.12"
terminal = { path = "../terminal" }
terminal-kernel = { path = "../terminal-kernel" }
terminal-kernel-vte = { path = "../terminal-kernel-vte" }
vte = "0.15"

[lints]
workspace = true
