[package]
name = "terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
gpui = { workspace = true, default-features = false }
gpui-macros.workspace = true
itertools.workspace = true
futures.workspace = true
regex.workspace = true
sysinfo.workspace = true
smol.workspace = true
libc.workspace = true
url.workspace = true
urlencoding.workspace = true
tracing.workspace = true
image.workspace = true
base64 = "0.22"
polling = "3"

config = { path = "../config" }
terminal-kernel = { path = "../terminal-kernel" }
themeing = { path = "../themeing" }

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true
